# Raytracing

./: .gitignore  CMakeLists.txt  NerfCreator.h  README.md  imgui.ini  main.cpp
include/: common.h
include/glad/: glad.h
include/imgui/backend/: imgui_impl_glfw.cpp
lib/: assimp-vc143-mt.lib
model/: bottle_of_water.glb  imgui.ini
nerfdata/: transforms.json
notes/: problem.txt
shader/: blur.frag  direct.frag  disney  disney.frag  disney_old.frag  filter_h.frag  filter_w.frag  filter_wh.frag  fireflyClamp.frag  fullscreen.vert  mixAndMap.frag  pathtracing.frag  pathtracing.glsl  pathtracing2024.frag  standard.frag  standard.vert  test.frag  test.glsl
shader/basic/: fullscreen.vert  math  math.glsl  sobol.frag  sobol.glsl  sobol_matrix  sobol_matrix.glsl
shader/materials/: RoughConductor.frag  RoughConductor.glsl  RoughDielectric.frag  RoughDielectric.glsl  materials.frag  materials.glsl
shader/old/: filter_w.frag  fireflyClamp.frag  mixAndMap.frag  pathtracing.frag  pathtracing2024.frag  pathtracing2024.glsl  raster_ps_tmp.glsl
shader/postprocessing/: SVGF_Merge.glsl  SVGF_SpatialFilter.glsl  SVGF_TemporalFilter.glsl  SVGF_VarianceFilter.glsl  StaticBlender.glsl  TAA.glsl  ToneMapMix.glsl  ToneMappingGamma.glsl  direct.frag  direct.glsl  filter.glsl  filter_h.frag  filter_w.frag  mixAndMap.frag
shader/rasterization/: raster_ps.glsl  raster_vs.glsl
src/: AABB.cpp  AABB.h  BVH.cpp  BVH.h  Buffer.h  Config.h  GBuffer.cpp  GBuffer.h  GPUResource.cpp  GPUResource.h  Intersection.cpp  Intersection.h  Material.cpp  Material.h  Object.cpp  Object.h  RenderPass.cpp  RenderPass.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  SSBOBuffer.h  Scene.cpp  Scene.h  TinyUI.cpp  TinyUI.h  Tool.cpp  Tool.h  Transform.cpp  Transform.h  Triangle.h
src/glad/: glad.c
src/instance/: Camera.cpp  Camera.h  Instance.cpp  Instance.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Scene.cpp  Scene.h  Triangle.h
src/material/: Material.h  RoughConductor.cpp  RoughConductor.h  RoughDielectric.cpp  RoughDielectric.h
src/renderpass/: DirectDisplayer.cpp  DirectDisplayer.h  FilterPass.cpp  FilterPass.h  GBuffer.cpp  GBuffer.h  RasterPass.cpp  RasterPass.h  RenderPass.cpp  RenderPass.h  Renderer.cpp  Renderer.h  Renderer2.cpp  Renderer2.h  SVGFMergePass.cpp  SVGFMergePass.h  SVGFSpatialFilterPass.cpp  SVGFSpatialFilterPass.h  SVGFTemporalFilter.cpp  SVGFTemporalFilter.h  SVGFVarianceFilter.cpp  SVGFVarianceFilter.h  StaticBlender.cpp  StaticBlender.h  TAA.cpp  TAA.h  ToneMapMix.cpp  ToneMapMix.h  ToneMappingGamma.cpp  ToneMappingGamma.h
src/texture/: CubeBox.cpp  CubeBox.h  HDRTexture.cpp  HDRTexture.h  SimpleTexture.cpp  SimpleTexture.h  Skybox.cpp  Skybox.h  Texture.cpp  Texture.h
src/tool/: exglfw.h  exglm.hpp  json.hpp  loader.cpp  loader.h  tool.cpp  tool.h
